# Veles

./: .gitignore  Modelos.ipynb  README.md  main.py  pyproject.toml
Data/: Data.ipynb  ETL.ipynb  datav1.csv  model_ranking.csv  pyproject.toml
Data/data/: dataset_15s_overlap.csv
Models/: Proyecto_ML_v2.ipynb  run_models.py
